; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_mz.c_checkEntrypointBuffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_mz.c_checkEntrypointBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"PE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @checkEntrypointBuffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkEntrypointBuffer(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [2 x i32], align 4
  store i32* %0, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @r_buf_read_le16_at(i32* %10, i32 22)
  store i32 %11, i32* %4, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @r_buf_read_le16_at(i32* %12, i32 20)
  store i32 %13, i32* %5, align 4
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @r_buf_read_le16_at(i32* %14, i32 8)
  %16 = load i32, i32* %4, align 4
  %17 = add nsw i32 %15, %16
  %18 = shl i32 %17, 4
  %19 = load i32, i32* %5, align 4
  %20 = add nsw i32 %18, %19
  store i32 %20, i32* %6, align 4
  %21 = load i32, i32* %6, align 4
  %22 = and i32 %21, 65535
  store i32 %22, i32* %6, align 4
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @r_buf_size(i32* %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp sge i32 %25, 32
  br i1 %26, label %27, label %56

27:                                               ; preds = %1
  %28 = load i32, i32* %6, align 4
  %29 = add nsw i32 %28, 1
  %30 = load i32, i32* %7, align 4
  %31 = icmp slt i32 %29, %30
  br i1 %31, label %32, label %56

32:                                               ; preds = %27
  %33 = load i32*, i32** %3, align 8
  %34 = call i32 @r_buf_read_le16_at(i32* %33, i32 60)
  store i32 %34, i32* %8, align 4
  %35 = load i32, i32* %8, align 4
  %36 = add nsw i32 %35, 2
  %37 = load i32, i32* %7, align 4
  %38 = icmp slt i32 %36, %37
  br i1 %38, label %39, label %55

39:                                               ; preds = %32
  %40 = load i32, i32* %7, align 4
  %41 = icmp sgt i32 %40, 260
  br i1 %41, label %42, label %55

42:                                               ; preds = %39
  %43 = load i32*, i32** %3, align 8
  %44 = load i32, i32* %8, align 4
  %45 = getelementptr inbounds [2 x i32], [2 x i32]* %9, i64 0, i64 0
  %46 = call i32 @r_buf_read_at(i32* %43, i32 %44, i32* %45, i32 2)
  %47 = icmp eq i32 %46, 2
  br i1 %47, label %48, label %54

48:                                               ; preds = %42
  %49 = getelementptr inbounds [2 x i32], [2 x i32]* %9, i64 0, i64 0
  %50 = call i32 @memcmp(i32* %49, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 2)
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %53, label %52

52:                                               ; preds = %48
  store i32 0, i32* %2, align 4
  br label %57

53:                                               ; preds = %48
  br label %54

54:                                               ; preds = %53, %42
  br label %55

55:                                               ; preds = %54, %39, %32
  store i32 1, i32* %2, align 4
  br label %57

56:                                               ; preds = %27, %1
  store i32 0, i32* %2, align 4
  br label %57

57:                                               ; preds = %56, %55, %52
  %58 = load i32, i32* %2, align 4
  ret i32 %58
}

declare dso_local i32 @r_buf_read_le16_at(i32*, i32) #1

declare dso_local i32 @r_buf_size(i32*) #1

declare dso_local i32 @r_buf_read_at(i32*, i32, i32*, i32) #1

declare dso_local i32 @memcmp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
